<resources>
    <string name="app_name">Badminton Trainer</string>
    <string name="badmintonCourt">Badminton Court</string>
    <string name="ownPlayer">Own Player</string>
    <string name="enemyPlayer">Enemy Player</string>
    <string name="featherBall">Feather Ball</string>

    <!-- Content of Main Activity -->
    <string name="startButton">Start</string>
    <string name="statsButton">Statistics</string>
    <string name="settingsButton">Settings</string>
    <string name="exitButton">Exit</string>

    <!-- Content of Start Activity -->
    <string name="title_activity_start">Training</string>
    <string name="newPosButton">Save as Start-Position</string>
    <string name="refreshStartPositions">Start-Position</string>
    <string name="deleteFile">Delete File</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="begin_Button">Begin Training</string>
    <string name="selecteditemshower">SelectedItemShower</string>
    <string name="plusSign">+</string>
    <string name="minusSign">-</string>
    <string name="start_game_button">Start Game</string>
    <string name="separator">separator</string>

    <!-- Content of Settings Activity -->
    <string name="settingsHeadline">Settings</string>
    <string name="settings_manualStartPos">Set Start Positions manually</string>
    <string name="settings_debugMode">Run in Debug Mode</string>
    <string name="settings_autocompleteScore">Automatically complete scores</string>
    <string name="version">Badminton Trainer - version \u0020</string>



    <!-- Content of RegisterMatch Activity -->
    <string name="registerMatchHeadline">Register Match</string>
    <string name="player1hint">Player 1: ID or name</string>
    <string name="player2hint">Player 2: ID or name</string>
    <string name="team1Player1hint">Team 1 Player 1: ID or name</string>
    <string name="team1Player2hint">Team 1 Player 2: ID or name</string>
    <string name="team2Player1hint">Team 2 Player 1: ID or name</string>
    <string name="team2Player2hint">Team 2 Player 2: ID or name</string>
    <string name="team1label">Team 1: </string>
    <string name="team2label">Team 2: </string>
    <string name="player1label">Player 1: </string>
    <string name="player2label">Player 2: </string>
    <string name="score1Hint">Score 1 </string>
    <string name="score2Hint">Score 2 </string>
    <string name="scoreSeparator">:</string>
    <string name="submitButton">Submit</string>
    <string name="firstSet">1. Set</string>
    <string name="secondSet">2. Set</string>
    <string name="thirdSet">3. Set</string>

    <!-- Content of Search Activity -->
    <string name="searchHint">Type in name or ID</string>
    <string name="matchTypeSingles">Singles</string>
    <string name="matchTypeDoubles">Doubles</string>
    <string name="matchTypeSinglesInfo">Singles Match</string>
    <string name="matchTypeDoublesInfo">Doubles Match</string>
    <string name="defaultMatchType_headline">Default Match Type</string>
    <string name="showChangelog_button">Show changelog</string>

</resources>