<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id = "@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".StartActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center">

    <TextView
            android:id="@+id/score_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/score_separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="1"
            android:layout_margin="5dp"
            android:textColor="#FF0000" />

        <ImageView
            android:id="@+id/score_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/score_player2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/score_player1"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/score_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/score_separator"
            android:text="3"
            android:layout_margin="5dp"
            android:textColor="#000000" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/court"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_court_phone"
        android:contentDescription="@string/badmintonCourt"
        android:adjustViewBounds="true"
        android:background="@drawable/badminton_court" />

    <ImageView
        android:id="@+id/ownPlayer"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/ownPlayer"
        android:src="@drawable/player_circle"
        android:scaleType="fitCenter"
        android:layout_marginTop="200dp"
        android:layout_marginStart="150dp"/>

    <ImageView
        android:id="@+id/enemyPlayer"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/enemyPlayer"
        android:src="@drawable/enemy_circle"
        android:layout_marginTop="525dp"
        android:layout_marginStart="270dp"/>

    <ImageView
        android:id="@+id/ball"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="225dp"
        android:contentDescription="@string/featherBall"
        android:scaleType="fitCenter"
        android:src="@drawable/featherball_gold" />

    <ImageView
        android:id="@+id/selectedItemShower"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="5dp"
        android:layout_gravity="end"
        android:contentDescription="@string/selecteditemshower"
        android:onClick="resetSelectedItem"/>

    <TextView
        android:id="@+id/debugTextView"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/newPosButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newPosButton"
        android:layout_gravity="bottom|end"
        android:onClick="newPositions"/>

    <Button
        android:id="@+id/setStartPos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refreshStartPositions"
        android:layout_gravity="bottom|start"
        android:onClick="setupStartPositions" />

    <Button
        android:id="@+id/beginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_Button"
        android:layout_gravity="center"
        android:onClick="beginTraining" />

</FrameLayout>